adds animation to hover for individual styling options in navigation; adds glossy effect to phones, updates images

--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2",
-    "react-syntax-highlighter": "^11.0.2"
+    "react-syntax-highlighter": "^11.0.2",
+    "semantic-ui-react": "^0.88.1"
   },
   "scripts": {
     "start": "react-scripts start",
