--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
+    "@material-ui/styles": "^4.5.0",
     "axios": "^0.19.0",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
